--- a/Plasmatic/package.json
+++ b/Plasmatic/package.json
@@ -10,8 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.1.0",
+    "@react-navigation/native": "^5.9.4",
+    "inversify": "^5.1.1",
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
