--- a/Plasmatic/package.json
+++ b/Plasmatic/package.json
@@ -49,6 +49,10 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/jest/setup.js"
+    ],
+    "transformIgnorePatterns": [],
     "moduleFileExtensions": [
       "ts",
       "tsx",
