--- a/Plasmatic/android/app/build.gradle
+++ b/Plasmatic/android/app/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: "com.android.application"
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -131,7 +132,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.plasmatic"
+        applicationId "com.plasmatic.test"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -148,9 +149,9 @@ android {
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storePassword 'plasmatic'
+            keyAlias 'debug_keystore'
+            keyPassword 'plasmatic'
         }
     }
     buildTypes {
