--- a/Plasmatic/android/app/src/main/AndroidManifest.xml
+++ b/Plasmatic/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.plasmatic">
+  package="com.plasmatic.test">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
