--- a/Plasmatic/package.json
+++ b/Plasmatic/package.json
@@ -21,6 +21,7 @@
     "inversify": "^5.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-config": "^1.4.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
