--- a/Plasmatic/package.json
+++ b/Plasmatic/package.json
@@ -14,7 +14,9 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/auth": "^12.1.0",
+    "@react-native-firebase/dynamic-links": "^12.1.0",
     "@react-native-firebase/firestore": "^12.1.0",
+    "@react-native-firebase/messaging": "^12.1.0",
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
