--- a/Plasmatic/android/app/src/main/AndroidManifest.xml
+++ b/Plasmatic/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             <category android:name="android.intent.category.BROWSABLE"/>
             <data android:scheme="http" />
             <data android:scheme="https" />
-            <data android:host="plasmatic.page.link"/>
+            <data android:host="plasmatic-test.com"/>
         </intent-filter>
       </activity>
     </application>
